// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordionstyle__Container-sc-1ev5kio-0 dojqWO"
>
  <div
    class="accordionstyle__Inner-sc-1ev5kio-2 lltJcS"
  >
    <h1
      class="accordionstyle__Title-sc-1ev5kio-3 kOTkPD"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordionstyle__Frame-sc-1ev5kio-1 fbTwSn"
    >
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          What is Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
          data-testid="accordion-body"
        >
          <span>
            Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          How much does Netflix cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
          data-testid="accordion-body"
        >
          <span>
            Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
          data-testid="accordion-body"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
          data-testid="accordion-body"
        >
          <span>
            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          What can I watch on Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
          data-testid="accordion-body"
        >
          <span>
            Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders the <Accordion /> with populated data 1`] = `
<div
  class="accordionstyle__Container-sc-1ev5kio-0 dojqWO"
>
  <div
    class="accordionstyle__Inner-sc-1ev5kio-2 lltJcS"
  >
    <h1
      class="accordionstyle__Title-sc-1ev5kio-3 kOTkPD"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordionstyle__Frame-sc-1ev5kio-1 fbTwSn"
    >
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          What is Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
        >
          <span>
            Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          How much does Netflix cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
        >
          <span>
            Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
        >
          <span>
            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="accordionstyle__Item-sc-1ev5kio-4 btjFtp"
      >
        <div
          class="accordionstyle__Header-sc-1ev5kio-5 iBTLgr"
        >
          What can I watch on Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordionstyle__Body-sc-1ev5kio-6 jTyKSn closed"
        >
          <span>
            Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
